@@ -1,8 +1,11 @@
 package File::Serialize::Serializer::Markdown;
+
 #ABSTRACT: Markdown (with frontmatter) serializer for File::Serialize
 
 use strict;
 use warnings;
+
+use Module::Runtime qw/ use_module /;
 
 use File::Serialize qw/ deserialize_file serialize_file /;
 use Moo;
@@ -10,10 +13,16 @@ with 'File::Serialize::Serializer';
 
 sub required_modules { return qw//; }
 
-sub extensions { qw/ md markdown / };
+sub extensions { qw/ md markdown / }
+
+sub is_operative {
+    return !!grep {
+        use_module("File::Serialize::Serializer::YAML::$_")->is_operative
+    } qw/ XS /;
+}
 
 sub serialize {
-    my( $self, $data, $options ) = @_;
+    my ( $self, $data, $options ) = @_;
 
     my $content = delete $data->{_content};
 
@@ -23,20 +32,18 @@ sub serialize {
 
     serialize_file \$yaml, $data, { format => 'yaml' };
 
-    return join "---\n", $yaml, $content//'';
+    return join "---\n", $yaml, $content // '';
 }
 
-
 sub deserialize {
-    my( $self, $data, $options ) = @_;
+    my ( $self, $data, $options ) = @_;
 
     # remote the potential leading `---`
     $data =~ s/^---\n//;
 
-
     return { _content => $data } if $data !~ /^---\n?$/m;
 
-    my( $frontmatter, $content ) = split /^---\n?$/m, $data, 2;
+    my ( $frontmatter, $content ) = split /^---\n?$/m, $data, 2;
 
     my $struct = deserialize_file( \$frontmatter, { format => 'yml' } );
 
